--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <body>
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
   <p>一旦写真だけ貼り付けます。今書いているので少しお待ちください。</p>
+  <h2>アプリの作り方</h2>
+  <p>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
+https://packager.turbowarp.org/<br>
+2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br>
+3.「www」ファイルの中にある「index.html」を消し、1で作ったファイルと入れ替える。この時project.htmlからindex.htmlに名前を変える。</p>
   <img src="Blank-—-Monaca-Cloud-IDE.png">
+4.Buildからアプリ化する。
 </body>
 </html>
