--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@ https://packager.turbowarp.org/<br>
 3.「www」ファイルの中にある「index.html」を消し、1で作ったファイルと入れ替える。この時project.htmlからindex.htmlに名前を変える。</p>
   <img src="Blank-—-Monaca-Cloud-IDE.png">
 4.Buildからアプリ化する。
+  <p>今回使ったのは<a src="https://scratch.mit.edu/projects/203422373">kevin_eleven_1234さんのDrop the Ball</a>というゲームです。</p>
 </body>
 </html>
