--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <p>一旦写真だけ貼り付けます。今書いているので少しお待ちください。</p>
   <h2>アプリの作り方</h2>
   <p>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
-https://packager.turbowarp.org/<br>
-2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br>
-3.「www」ファイルの中にある「index.html」を消し、1で作ったファイルと入れ替える。この時project.htmlからindex.htmlに名前を変える。</p>
-  <img src="Blank-—-Monaca-Cloud-IDE.png">
-4.Buildからアプリ化する。
-  <p>今回使ったのは<a src="https://scratch.mit.edu/projects/203422373">kevin_eleven_1234さんのDrop the Ball</a>というゲームです。</p>
+  <a href="https://packager.turbowarp.org/">TurboWarp Packager</a></p>
+  <img src="TurboWarp-Packager.png"width="500px">
+  <p>2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br>
+  3.「www」ファイルの中にある「index.html」を消し、1で作ったファイルと入れ替える。この時project.htmlからindex.htmlに名前を変える。</p>
+  <img src="Blank-—-Monaca-Cloud-IDE.png"width="500px">
+
+  <p>4.Buildからアプリ化する。<br>
+  <img src="Blank-—-Monaca-Cloud-IDE(1).png"width="500px">
+  今回使ったのは<a href="https://scratch.mit.edu/projects/203422373">kevin_eleven_1234さんのDrop the Ball</a>というゲームです。</p>
 </body>
 </html>
