--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+  <title>52Tellur | ScratchとMonacaでアプリケーションを作る</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
   <p>一旦写真だけ貼り付けます。今書いているので少しお待ちください。</p>
@@ -11,7 +15,7 @@
   <img src="Blank-—-Monaca-Cloud-IDE.png"width="500px">
 
   <p>4.Buildからアプリ化する。<br>
-  <img src="Blank-—-Monaca-Cloud-IDE(1).png"width="500px">
+  <img src="Blank-—-Monaca-Cloud-IDE (1).png"width="500px">
   今回使ったのは<a href="https://scratch.mit.edu/projects/203422373">kevin_eleven_1234さんのDrop the Ball</a>というゲームです。</p>
 </body>
 </html>
