--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
-  <p>一旦写真だけ貼り付けます。今書いているので少しお待ちください。</p>
-  <h2>アプリの作り方</h2>
+  <h2>アプリの作り方(Monacaを使ったバージョン)</h2>
   <p>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
   <a href="https://packager.turbowarp.org/">TurboWarp Packager</a></p>
   <img src="TurboWarp-Packager.png"width="500px">
