--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
   <h2>アプリの作り方(Monacaを使ったバージョン)</h2>
-  <p>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
+  <p>0.プロジェクトをスマホ画面の大きさで作る1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
   <a href="https://packager.turbowarp.org/">TurboWarp Packager</a></p>
   <img src="TurboWarp-Packager.png"width="500px">
   <p>2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br>
