--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <body>
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
   <h2>アプリの作り方(Monacaを使ったバージョン)</h2>
-  <p>0.プロジェクトをスマホ画面の大きさで作る1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
+  <p>0.プロジェクトをスマホ画面の大きさで作る<br><br>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
   <a href="https://packager.turbowarp.org/">TurboWarp Packager</a></p>
   <img src="TurboWarp-Packager.png"width="500px">
-  <p>2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br>
+  <p>2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br><br>
   3.「www」ファイルの中にある「index.html」を消し、1で作ったファイルと入れ替える。この時project.htmlからindex.htmlに名前を変える。</p>
   <img src="Blank-—-Monaca-Cloud-IDE.png"width="500px">
 
   <p>4.Buildからアプリ化する。<br>
   <img src="Blank-—-Monaca-Cloud-IDE (1).png"width="500px">
-  今回使ったのは<a href="https://scratch.mit.edu/projects/203422373">kevin_eleven_1234さんのDrop the Ball</a>というゲームです。</p>
+  今回使ったのは<a href="https://scratch.mit.edu/projects/203422373">kevin_eleven_1234さんのDrop the Ball</a>というゲームです。<br><br><br></p>
 </body>
 </html>
