--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
   <h2>アプリの作り方(Monacaを使ったバージョン)</h2>
   <p>0.プロジェクトをスマホ画面の大きさで作る<br><br>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
-  <a href="https://packager.turbowarp.org/">TurboWarp Packager</a></p>
+  <div class="blogCard blogCard--noimg"><div class="blogCardCont"><div class="blogCardTxt"><p class="blogCardTitle"><a href="https://packager.turbowarp.org/" target="_blank">TurboWarp Packager</a></p><p>undefined</p></div></div><div class="blogCardFooter"><a href="https://packager.turbowarp.org/"><img src="http://www.google.com/s2/favicons?domain=https://packager.turbowarp.org/" alt="">packager.turbowarp.org</a></div></div></p>
+  
   <img src="TurboWarp-Packager.png"width="500px">
   <p>2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br><br>
   3.「www」ファイルの中にある「index.html」を消し、1で作ったファイルと入れ替える。この時project.htmlからindex.htmlに名前を変える。</p>
