--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1>ScratchとMonacaでアプリケーションを作る</h1>
   <h2>アプリの作り方(Monacaを使ったバージョン)</h2>
   <p>0.プロジェクトをスマホ画面の大きさで作る<br><br>1.下のURLからScratchのプロジェクトをパッケージ化する。この時ステージの大きさをスマホに合わせる。<br>
-  <div class="blogCard blogCard--noimg"><div class="blogCardCont"><div class="blogCardTxt"><p class="blogCardTitle"><a href="https://packager.turbowarp.org/" target="_blank">TurboWarp Packager</a></p><p>undefined</p></div></div><div class="blogCardFooter"><a href="https://packager.turbowarp.org/"><img src="http://www.google.com/s2/favicons?domain=https://packager.turbowarp.org/" alt="">packager.turbowarp.org</a></div></div></p>
+  <div class="blogCard blogCard--noimg"><div class="blogCardCont"><div class="blogCardTxt"><p class="blogCardTitle"><a href="https://packager.turbowarp.org/" target="_blank">TurboWarp Packager</a></p><p>Note - This is in a very early stage of development. Use with care.</p></div></div><div class="blogCardFooter"><a href="https://packager.turbowarp.org/"><img src="http://www.google.com/s2/favicons?domain=https://packager.turbowarp.org/" alt="">packager.turbowarp.org</a></div></div></p>
   <!--https://www.granfairs.com/blog/staff/blogcard-by-bookmarkletこれです。ありがとうございます。-->
   <img src="TurboWarp-Packager.png"width="500px">
   <p>2.Monacaで「Create New Project」から新しいプロジェクトを作る。<br><br>
